test/types/scalar/bradc/bitNegateBool.dyno.good
bitNegateBool.chpl:4: error: ~ is not supported on operands of boolean type
bitNegateBool.chpl:5: error: ~ is not supported on operands of boolean type
