test/types/scalar/bradc/bitNegateBool.chpl
var t: bool = true;
var f: bool = true;

writeln("~true = ", ~t);
writeln("~false = ", ~f);
